// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="cf-cmkk1"
>
  Hello
</div>
`;

exports[`should render 1 button 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-choow9"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 2 buttons 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-9ar9ft"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-choow9"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-9ar9ft"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-1qzp0eh"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-choow9"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`should render 3 buttons with spacing 1`] = `
<div
  className="cf-cmkk1"
>
  <button
    className="cf-9ar9ft"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-1c6rqgx"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="cf-5f6sjl"
    disabled={undefined}
    onClick={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;
